--- a/ui/node.html
+++ b/ui/node.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col text-right">
-                    <h2>Funds: {{ funds }}</h2>
+                    <h2>Funds: {{ funds.toFixed(2) }}</h2>
                 </div>
             </div>
             <hr>
@@ -236,41 +236,80 @@
             methods: {
                 onCreateWallet: function () {
                     // Send Http request to create a new wallet (and return keys)
-                    var vm = this
+                    var vm = this;
+                    this.walletLoading = true
                     axios.post('/wallet')
                     .then(response => {
                         vm.error = null;
-                        vm.success = `Created Wallet! \nPublic Key: ${response.data.public_key}, \n\nPrivate Key: ${response.data.private_key}`
+                        vm.success = `Created Wallet! \nPublic Key: ${response.data.public_key}, \n\nPrivate Key: ${response.data.private_key}`;
+                        vm.wallet = {
+                            public_key: response.data.public_key,
+                            private_key: response.data.private_key
+                        }
+                        vm.walletLoading = false;
+                        vm.funds = response.data.funds;
                     })
                     .catch(error => {
                         vm.success = null;
-                        vm.error = error.data.message
+                        vm.error = error.response.data.message;
+                        vm.wallet = null;
+                        vm.walletLoading = false;
                     })
                 },
                 onLoadWallet: function () {
                     // Send Http request to load an existing wallet (from a file on the server)
-
+                    var vm = this;
+                    this.walletLoading = true;
+                    axios.get('/wallet')
+                    .then(response => {
+                        vm.error = null;
+                        vm.success = `Loaded Wallet! \nPublic Key: ${response.data.public_key}, \n\nPrivate Key: ${response.data.private_key}`;
+                        vm.wallet = {
+                            public_key: response.data.public_key,
+                            private_key: response.data.private_key
+                        }
+                        vm.funds = response.data.funds;
+                        vm.walletLoading = false;
+                    })
+                    .catch(error => {
+                        vm.success = null;
+                        vm.error = error.response.data.message;
+                        vm.wallet = null;
+                        vm.walletLoading = false;
+                    })
                 },
                 onSendTx: function () {
                     // Send Transaction to backend
-                    if (Math.random() > 0.5) {
-                        this.error = null
-                        this.success = 'Successfully stored transaction!'
-                        this.funds = this.funds - this.outgoingTx.amount
-                    } else {
-                        this.success = null;
-                        this.error = 'Something went wrong!'
-                    }
+                    var vm = this;
+                    this.txLoading = true;
+                    axios.post('/transaction', {
+                        recipient: this.outgoingTx.recipient,
+                        amount: this.outgoingTx.amount
+                    })
+                    .then(response => {
+                        vm.error = null;
+                        vm.success = response.data.message;
+                        vm.funds = response.data.funds;
+                        vm.txLoading = false;
+                    })
+                    .catch(error => {
+                        vm.success = null;
+                        vm.error = error.response.data.message;
+                        vm.txLoading = false;
+                    })
                 },
                 onMine: function() {
-                    if (Math.random() > 0.5) {
-                        this.error = null
-                        this.success = 'Successfully mined coins!'
-                        this.funds = this.funds + 10
-                    } else {
-                        this.success = null;
-                        this.error = 'Something went wrong!'
-                    }
+                    var vm = this;
+                    axios.post('/mine')
+                    .then(response => {
+                        vm.error = null;
+                        vm.success = response.data.message;
+                        vm.funds = response.data.funds;
+                    })
+                    .catch(error => {
+                        vm.success = null;
+                        vm.error = error.response.data.message;
+                    })
                 },
                 onLoadData: function () {
                     if (this.view === 'chain') {
