--- a/ui/node.html
+++ b/ui/node.html
@@ -254,7 +254,7 @@
                     axios.post('/wallet')
                     .then(response => {
                         vm.error = null;
-                        vm.success = `\nPublic Key: ${response.data.public_key}, \n\nPrivate Key: ${response.data.private_key}`;
+                        vm.success = `\nPublic Key: ${response.data.public_key} \n\nPrivate Key: ${response.data.private_key}`;
                         vm.wallet = {
                             public_key: response.data.public_key,
                             private_key: response.data.private_key
@@ -276,7 +276,7 @@
                     axios.get('/wallet')
                     .then(response => {
                         vm.error = null;
-                        vm.success = `\nPublic Key: ${response.data.public_key}, \n\nPrivate Key: ${response.data.private_key}`;
+                        vm.success = `\nPublic Key: ${response.data.public_key} \n\nPrivate Key: ${response.data.private_key}`;
                         vm.wallet = {
                             public_key: response.data.public_key,
                             private_key: response.data.private_key
